--- a/templates/Feedbackpg.html
+++ b/templates/Feedbackpg.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 <div class="faculty-feedbacks-container">
-    <h3>hey there,</h3>
+    <h3>hey student,</h3>
     <form class="select-cont" method="POST">
         {{form.hidden_tag()}}
         <p class="bold" style="font-size: 20px;padding-top: 10px;">Select Semester</p>
