--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -19,10 +19,9 @@
         <div class="container dashboard-card tertiary">
             <p>overall sentiment</p>
             <h1>
-                {% if faculty_overall_sentiment > 0.5 %}
+                {% if faculty_overall_sentiment > 0 %}
                 positive
-                {% elif faculty_overall_sentiment < -0.5 %} negative {% elif faculty_overall_sentiment < 0.5 and
-                    faculty_overall_sentiment> -0.5 %} neutral {%
+                {% elif faculty_overall_sentiment < 0 %} negative {% elif faculty_overall_sentiment == 0 %} neutral {%
                     endif %} </h1>
         </div>
     </div>
@@ -80,11 +79,10 @@
         <div class="container dashboard-card secondary">
             <p>overall sentiment</p>
             <h1>
-                {% if faculty_overall_sentiment > 0.5 %}
+                {% if faculty_overall_sentiment > 0 %}
                 positive
-                {% elif faculty_overall_sentiment < -0.5 %} negative {% elif faculty_overall_sentiment < 0.5 and
-                    faculty_overall_sentiment> -0.5 %} neutral {%
-                    endif %} </h1>
+                {% elif faculty_overall_sentiment < 0 %} negative {% elif faculty_overall_sentiment == 0 %} neutral {%
+                    endif %}  </h1>
         </div>
     </div>
 </div>
@@ -93,10 +91,10 @@
     <h3>Feedbacks</h3>
     {% for feedback in faculty_feedbacks %}
     <div class="feedback">
-        {% if feedback.sentiment < -0.5 %} <p class="sentiment" style="color: red; font-weight: bold;">negative</p>
-            {% elif feedback.sentiment > 0.5 %}
+        {% if feedback.sentiment < 0 %} <p class="sentiment" style="color: red; font-weight: bold;">negative</p>
+            {% elif feedback.sentiment > 0 %}
             <p class="sentiment" style="color: green; font-weight: bold;">positive</p>
-            {% elif feedback.sentiment < 0.5 and feedback.sentiment > -0.5 %}
+            {% elif feedback.sentiment == 0 %}
             <p class="sentiment" style="color: yellow; font-weight: bold;">neutral</p>
             {% endif %}
             <br>
