piechart admin connected

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -131,8 +131,8 @@
         var data = google.visualization.arrayToDataTable([
             ['Sentiment', 'Score'],
             ['Neutral', '{{neutral}}'],
-            ['Positive', '{{neutral}}'],
-            ['Negative', '{{neutral}}'],
+            ['Positive', '{{pos}}'],
+            ['Negative', '{{neg}}'],
         ]);
 
         // Optional; add a title and set the width and height of the chart
