--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -130,9 +130,9 @@
     function drawChart() {
         var data = google.visualization.arrayToDataTable([
             ['Sentiment', 'Score'],
-            ['Neutral', '{{neutral}}'],
-            ['Positive', '{{pos}}'],
-            ['Negative', '{{neg}}'],
+            ['Neutral', parseInt('{{neutral}}')],
+            ['Positive', parseInt('{{pos}}')],
+            ['Negative', parseInt('{{neg}}')],
         ]);
 
         // Optional; add a title and set the width and height of the chart
