--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -53,7 +53,7 @@
                     negative
                     </font>
                     {% elif faculty.sentiment > 0 %}
-                    <font style="color: green;">
+                    <font style="color: rgb(4, 136, 4);">
                         positive
                     </font>
                     {% elif faculty.sentiment == 0 %}
@@ -136,7 +136,10 @@
         ]);
 
         // Optional; add a title and set the width and height of the chart
-        var options = { 'title': 'Sentiment Analysis', 'width': 500, 'height': 300 };
+        var options = {
+            'title': 'Sentiment Analysis', 'width': 500, 'height': 300, 'colors': ['#F6BE00', '#00FF00', 'FF0000'
+            ]
+        };
 
         // Display the chart inside the <div> element with id="piechart"
         var chart = new google.visualization.PieChart(document.getElementById('piechart'));
