--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -87,6 +87,10 @@
     </div>
 </div>
 
+<div class="piechart-container" style="display: flex; flex-direction: column; align-items: center;">
+    <div id="piechart"></div>
+</div>
+
 <div class="faculty-feedbacks-container">
     <h3>Feedbacks</h3>
     {% for feedback in faculty_feedbacks %}
